# CatOS-Hello

./: .gitignore  AssistantTab.cpp  AssistantTab.h  CMakeLists.txt  GeneralNewsTab.cpp  GeneralNewsTab.h  InstallAppsTab.cpp  InstallAppsTab.h  MirrorListWindow.cpp  MirrorListWindow.h  PKGBUILD  PostInstallGuideTab.cpp  PostInstallGuideTab.h  RepoListWindow.cpp  RepoListWindow.h  TipsTab.cpp  TipsTab.h  catos-hello.desktop  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
scripts/: CollectLogs  ResetKeyring  RunInTerminal  collect-logs
tests/: CMakeLists.txt  README.md  run_tests.sh  test_mirrorlist.cpp  test_repolist.cpp
tests/test_data/: mirrorlist.sample  pacman.conf.sample
translations/: CatOS-Hello_de.ts  CatOS-Hello_fr.ts  CatOS-Hello_zh_CN.ts
